Completed the catfacts fetch session

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <p>Number of cat facts (maximum 50)</p>
           <form action="">
             <input type="number" name="quote" id="quote" placeholder="number of cats facts (max 50)" max="50" min="1">
-            <button id="factbtn">Submit</button>
+            <button id="factbtn" type="button">Submit</button>
           </form>
         </div>
        <div class="imgsection">
@@ -31,8 +31,7 @@
        </div>
       </div>  
     </div>
-    <div id="outputValue">
-      
+    <div id="outputValue">      
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
