Completed the cat Facts part and the spinner

--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
        </div>
       </div>  
     </div>
-    <div id="outputValue">      
-    </div>
+    <div id="spinner"></div>    
+      <div id="outputValue">      
+            
+      
+      </div>
+  
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
