Complete code fetching cat facts

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <button id="factbtn" type="button">Submit</button>
           </form>
         </div>
-       <div class="imgsection">
+       <div class="imgSection">
         <p>Number of Cats Images (maximum 10)</p>
         <form action="">
-          <input type="number" name="catImg" id="catImg" placeholder="number of cat images (max 10)" max="10" min="1">
+          <input type="number" name="catImg" id="catImg" placeholder="number of cat images">
           <button id="imgbtn">Submit</button>
         </form>
        
