--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/src/style.css">
   </head>
   <body>
+    <div class="container">
     <div id="app">
       <div>
         <h2>The Cats App</h2>
@@ -34,6 +35,8 @@
     <div id="spinner"></div>    
       <div id="outputValue">           
       
+      </div>
+
       </div>
   
     <script type="module" src="/src/main.js"></script>
